--- a/02-pod.yaml
+++ b/02-pod.yaml
@@ -1,4 +1,4 @@
-kind: pod 
+kind: Pod 
 apiVersion: v1 
 metadata: 
   name: pod-nginx
@@ -6,4 +6,3 @@ spec:
   containers:
     - name: nginx 
       image: nginx 
-      
