--- a/07-resource_limits.yaml
+++ b/07-resource_limits.yaml
@@ -10,9 +10,9 @@ spec:
       image: nginx
       resources: 
         requests:
-          memory : "50mi"
+          memory : "50Mi"
           cpu: "64m" 
         limits:
-          memory : "100mi"
+          memory : "100Mi"
           cpu: "128m"
    
