--- a/09-pod-cnfig.yaml
+++ b/09-pod-cnfig.yaml
@@ -7,17 +7,17 @@ spec:
     - name: nginx
       image: nginx
       env:  
-        - trainer : TRAINER_NAME
+        - name : TRAINER_NAME
           valueFrom:
             configMapKeyRef: 
               name: config-map
               key : trainer 
-        - duration: time
+        - name : duration_time
           valueFrom: 
               configMapKeyRef:
                 name: config-map
                 key : duration 
-        - course: course_name 
+        - name : course_name 
           valueFrom: 
             configMapKeyRef:
               name: config-map
