--- a/08-conf-map.yaml
+++ b/08-conf-map.yaml
@@ -3,6 +3,6 @@ apiVersion: v1
 metadata: 
   name: config-map 
 data:
-  course : devops 
-  trainer: siva kumar 
-  duration: 150days 
+  course : K8s 
+  trainer: Kedarnath  
+  duration: 30days 
