--- a/09-pod-cnfig.yaml
+++ b/09-pod-cnfig.yaml
@@ -1,26 +1,29 @@
 apiVersion: v1 
 kind: Pod
 metadata: 
-  name: pod-config
+  name: pod-config-2
 spec: 
   containers: 
     - name: nginx
       image: nginx
-      env:  
-        - name : TRAINER_NAME
-          valueFrom:
-            configMapKeyRef: 
-              name: config-map
-              key : trainer 
-        - name : duration_time
-          valueFrom: 
-              configMapKeyRef:
-                name: config-map
-                key : duration 
-        - name : course_name 
-          valueFrom: 
-            configMapKeyRef:
-              name: config-map
-              key : course
+      # env:  
+      #   - name : TRAINER_NAME
+      #     valueFrom:
+      #       configMapKeyRef: 
+      #         name: config-map
+      #         key : trainer 
+      #   - name : duration_time
+      #     valueFrom: 
+      #         configMapKeyRef:
+      #           name: config-map
+      #           key : duration 
+      #   - name : course_name 
+      #     valueFrom: 
+      #       configMapKeyRef:
+      #         name: config-map
+      #         key : course
+      env: 
+        configMap:
+          name: config
 
 
