--- a/09-pod-cnfig.yaml
+++ b/09-pod-cnfig.yaml
@@ -23,7 +23,7 @@ spec:
       #         name: config-map
       #         key : course
       env: 
-        configMap:
+        configMapRef:
           name: config
 
 
