--- a/09-pod-cnfig.yaml
+++ b/09-pod-cnfig.yaml
@@ -22,7 +22,7 @@ spec:
       #       configMapKeyRef:
       #         name: config-map
       #         key : course
-      env: 
+      envFrom: 
         configMapRef:
           name: config
 
