--- a/10-secrets.yaml
+++ b/10-secrets.yaml
@@ -3,5 +3,5 @@ Kind: Secret
 metadata: 
   name: sec
 data:
-  user_id: YWRtaW4K
-  user_password: YWRtaW5AMTIzNDUK
+  user-id: YWRtaW4K
+  user-password: YWRtaW5AMTIzNDUK
