--- a/10-secrets.yaml
+++ b/10-secrets.yaml
@@ -1,7 +1,8 @@
-apiVersion: v1 
-Kind: Secret 
-metadata: 
+apiVersion : v1 
+kind : Secret 
+metadata : 
   name: sec
+type: Opaque
 data:
   user-id: YWRtaW4K
   user-password: YWRtaW5AMTIzNDUK
