--- a/11-pod-secrets.yaml
+++ b/11-pod-secrets.yaml
@@ -8,15 +8,15 @@ spec:
       image: nginx
       env:
       -  name: user 
-         valueForm:
+         valueFrom:
            secretKeyRef:
              name: sec
              key: user-id
-      - name: pass 
-        valueForm:
-          secretKeyRef:
-            name: sec
-            key: user-password
+      - name: password 
+        valueFrom:
+         secretKeyRef:
+          name: sec
+          key: user-password
 
 
           
